--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500" rel="stylesheet">
     <script src="https://use.fontawesome.com/db90ab2e59.js"></script>
 </head>
 
